[package]
name = "factorio-mlua-sys"
version = "0.6.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
rust-version = "1.71"
edition = "2021"
repository = "https://github.com/khvzak/mlua"
documentation = "https://docs.rs/mlua-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
license = "MIT"
links = "lua"
build = "build/main.rs"
description = """
Low level (FFI) bindings to Lua 5.4/5.3/5.2/5.1 (including LuaJIT) and Roblox Luau
"""

[package.metadata.docs.rs]
features = ["lua52-factorio", "vendored"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
lua54 = []
lua53 = []
lua52-factorio = ["vendored", "link-cplusplus"]
lua52 = []
lua51 = []
luajit = []
luajit52 = ["luajit"]
luau = ["luau0-src"]
luau-codegen = ["luau"]
luau-vector4 = ["luau"]
vendored = ["factorio-lua-src", "luajit-src"]
module = []

[dependencies]
link-cplusplus = { version = "1.0.9", optional = true, features = ["libc++"] }

[build-dependencies]
cc = "1.0"
cfg-if = "1.0"
pkg-config = "0.3.17"
factorio-lua-src = { git = "https://github.com/sribich/lua-src-rs", branch = "master", optional = true }
luajit-src = { version = ">= 210.5.0, < 210.6.0", optional = true }
luau0-src = { version = "0.9.0", optional = true }
